--- a/public/assets/web/ASSets/css/header.css
+++ b/public/assets/web/ASSets/css/header.css
@@ -4,7 +4,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* ///////////////////////////////// */
 /* topbar */
 .topbar {
@@ -33,7 +32,7 @@
         justify-content: center;
         gap: 5px;
         color: #fff;
-        font-family: Montserrat;
+        font-family: Alexandria;
         font-size: clamp(8px, 0.7291666666666666vw, 14px);
         font-weight: 700;
         line-height: clamp(18px, 1.25vw, 24px);
@@ -113,7 +112,7 @@
       gap: clamp(5px, 0.5208333333333333vw, 10px);
 
       h2 {
-        font-family: Montserrat;
+        font-family: Alexandria;
         font-size: clamp(8px, 0.7291666666666666vw, 14px);
         font-weight: 700;
         line-height: clamp(18px, 1.25vw, 24px);
@@ -172,7 +171,7 @@
         justify-content: center;
         gap: clamp(5px, 0.5208333333333333vw, 10px);
         color: #fff;
-        font-family: Montserrat;
+        font-family: Alexandria;
         font-size: clamp(8px, 0.7291666666666666vw, 14px);
         font-weight: 700;
         line-height: clamp(18px, 1.25vw, 24px);
@@ -239,7 +238,7 @@
 
               li {
                 a {
-                  font-family: "Montserrat", serif;
+                  font-family: "Alexandria", serif;
                   font-size: clamp(10px, 0.7291666666666666vw, 14px);
                   font-weight: 700;
                   line-height: 24px;
@@ -262,7 +261,7 @@
                     background: transparent;
                     border: none;
                     outline: none;
-                    font-family: "Montserrat", serif;
+                    font-family: "Alexandria", serif;
                     font-size: clamp(10px, 0.7291666666666666vw, 14px);
                     font-weight: 700;
                     line-height: 24px;
@@ -425,7 +424,7 @@
             width: fit-content;
             border-radius: 8px;
             color: #fd9636;
-            font-family: Montserrat;
+            font-family: Alexandria;
             font-size: 14px;
             font-weight: 700;
             line-height: 24px;
@@ -473,7 +472,7 @@
                 height: 14px;
                 color: #ffffff;
                 text-align: center;
-                font-family: Cairo;
+                font-family: Alexandria;
                 font-size: 10px;
                 font-weight: 600;
                 line-height: 8px;
@@ -485,7 +484,7 @@
 
               .title-item {
                 color: #fd9636;
-                font-family: Cairo;
+                font-family: Alexandria;
                 font-size: clamp(11px, 0.9375vw, 18px);
                 font-weight: 600;
                 line-height: 16px;
@@ -573,7 +572,7 @@
                   width: 100%;
 
                   .user-name {
-                    font-family: Inter;
+                    font-family: Alexandria;
                     font-size: 15px;
                     font-weight: 600;
                     line-height: 24px;
@@ -582,7 +581,7 @@
                   }
 
                   .user-email {
-                    font-family: Inter;
+                    font-family: Alexandria;
                     font-size: clamp(9px, 0.5729166666666666vw, 11px);
                     font-weight: 500;
                     line-height: 12px;
@@ -607,7 +606,7 @@
                 padding: 12px;
 
                 span {
-                  font-family: Inter;
+                  font-family: Alexandria;
                   font-size: clamp(12px, 0.78125vw, 15px);
                   font-weight: 600;
                   line-height: 24px;
@@ -780,7 +779,7 @@
               width: 100%;
 
               .user-name {
-                font-family: Inter;
+                font-family: Alexandria;
                 font-size: 15px;
                 font-weight: 600;
                 line-height: 24px;
@@ -789,7 +788,7 @@
               }
 
               .user-email {
-                font-family: Inter;
+                font-family: Alexandria;
                 font-size: 9px;
                 font-weight: 500;
                 line-height: 12px;
@@ -825,7 +824,7 @@
               padding: 12px;
 
               span {
-                font-family: Inter;
+                font-family: Alexandria;
                 font-size: 12px;
                 font-weight: 600;
                 line-height: 24px;
@@ -850,7 +849,7 @@
 
             li {
               .navLink {
-                font-family: Montserrat;
+                font-family: Alexandria;
                 font-size: 14px;
                 font-weight: 700;
                 line-height: 24px;
@@ -868,7 +867,7 @@
                   border: none;
                   outline: none;
                   background: none;
-                  font-family: Montserrat;
+                  font-family: Alexandria;
                   font-size: 14px;
                   font-weight: 700;
                   line-height: 24px;
@@ -929,7 +928,7 @@
           justify-content: space-between;
 
           .langTitle {
-            font-family: Montserrat;
+            font-family: Alexandria;
             font-size: 14px;
             font-weight: 700;
             line-height: 24px;
@@ -955,7 +954,7 @@
                 align-items: center;
                 justify-content: center;
                 gap: 5px;
-                font-family: Montserrat;
+                font-family: Alexandria;
                 font-size: 14px;
                 font-weight: 700;
                 line-height: 24px;
@@ -993,7 +992,7 @@
             padding: 12px;
 
             span {
-              font-family: Inter;
+              font-family: Alexandria;
               font-size: 15px;
               font-weight: 600;
               line-height: 24px;
@@ -1019,7 +1018,7 @@
               justify-content: center;
               padding: 4px;
               gap: 8px;
-              font-family: Inter;
+              font-family: Alexandria;
               font-size: 15px;
               font-weight: 600;
               line-height: 24px;
@@ -1077,7 +1076,7 @@
         align-items: start;
         justify-content: center;
         padding: clamp(20px, 2.083333333333333vw, 40px);
-        gap: clamp( 5px, 1.0416666666666665vw, 20px);
+        gap: clamp(5px, 1.0416666666666665vw, 20px);
         border-radius: 12px;
         border: 1px solid #f1f1f2;
 
@@ -1095,7 +1094,7 @@
           align-items: start;
           justify-content: start;
           flex-direction: column;
-          width: clamp( 120px, 9.53125vw, 183px);
+          width: clamp(120px, 9.53125vw, 183px);
 
           h3 {
             font-family: Alexandria;
@@ -1115,17 +1114,20 @@
             padding-inline-start: clamp(7px, 0.5208333333333333vw, 10px);
 
             li {
-              font-family: Inter;
-              font-size: clamp(10px, 0.7291666666666666vw, 14px);
-              font-weight: 700;
-              line-height: 14px;
-              color: #5e6278;
               display: flex;
               align-items: center;
               justify-content: start;
               gap: 5px;
-              text-wrap: nowrap;
               flex-wrap: nowrap;
+
+              a {
+                font-family: Alexandria;
+                font-size: clamp(10px, 0.7291666666666666vw, 14px);
+                font-weight: 700;
+                line-height: 14px;
+                color: #5e6278;
+                text-wrap: nowrap;
+              }
 
               div {
                 width: clamp(5px, 0.3125vw, 6px);
@@ -1134,11 +1136,14 @@
                 border-radius: 20px;
               }
             }
-            li:hover {
-              color: #FD9636;
+            li:hover,
+            li.active {
+              a {
+                color: #fd9636 !important;
+              }
 
               div {
-                background: #FD9636;
+                background: #fd9636 !important;
               }
             }
           }
@@ -1270,10 +1275,23 @@ body.dark {
 
             ul {
               li {
-                color: #b9bcd0;
+                a {
+                  color: #b9bcd0;
+                }
 
                 div {
                   background: #d8d8e5;
+                }
+              }
+
+              li:hover,
+              li.active {
+                a {
+                  color: #fd9636 !important;
+                }
+
+                div {
+                  background: #fd9636 !important;
                 }
               }
             }
