--- a/public/assets/web/ASSets/css/product-details.css
+++ b/public/assets/web/ASSets/css/product-details.css
@@ -1,8 +1,5 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* ///////////////////////////////////////// */
 /* container */
@@ -237,7 +234,7 @@
           gap: clamp(5px, 0.5729166666666666vw, 11px);
 
           span {
-            font-family: Cairo;
+            font-family: Alexandria;
             font-size: clamp(10px, 0.8333333333333334vw, 16px);
             font-weight: 400;
             line-height: 18px;
@@ -608,7 +605,7 @@
         gap: clamp(5px, 0.5729166666666666vw, 11px);
 
         span {
-          font-family: Cairo;
+          font-family: Alexandria;
           font-size: clamp(10px, 0.8333333333333334vw, 16px);
           font-weight: 400;
           line-height: 18px;
@@ -656,7 +653,7 @@
         }
 
         span {
-          font-family: Cairo;
+          font-family: Alexandria;
           font-size: clamp(10px, 0.8333333333333334vw, 16px);
           font-weight: 400;
           line-height: 18px;
@@ -764,7 +761,7 @@
 
     h2 {
       a {
-        font-family: Inter;
+        font-family: Alexandria;
         font-size: clamp(14px, 1.875vw, 36px);
         font-weight: 600;
         line-height: 48px;
@@ -898,7 +895,7 @@
           background-color: #ff1212;
           z-index: 10;
           color: #fff;
-          font-family: Cairo;
+          font-family: Alexandria;
           font-size: 12px;
           font-weight: 600;
           line-height: 12px;
@@ -1152,7 +1149,7 @@
           .flash-new-offer {
             width: 46px;
             height: 16px;
-            font-family: Cairo;
+            font-family: Alexandria;
             font-size: 8px;
             font-weight: 600;
             line-height: 8px;
