--- a/public/assets/web/ASSets/css/seller.css
+++ b/public/assets/web/ASSets/css/seller.css
@@ -1,8 +1,5 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* ///////////////////////////////////////// */
 /* container */
@@ -342,7 +339,7 @@
                 position: relative;
 
                 span {
-                  font-family: Inter;
+                  font-family: Alexandria;
                   font-size: 10px;
                   font-weight: 600;
                   line-height: clamp(6px, 0.5208333333333333vw, 10px);
@@ -546,7 +543,7 @@
                 justify-content: center;
 
                 input {
-                  font-family: Poppins;
+                  font-family: Alexandria;
                   font-size: 18px;
                   font-weight: 600;
                   line-height: 19.98px;
