--- a/public/assets/web/ASSets/css/shop.css
+++ b/public/assets/web/ASSets/css/shop.css
@@ -1,8 +1,5 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* ///////////////////////////////////////// */
 /* container */
@@ -690,7 +687,7 @@
           background-color: #ff1212;
           z-index: 10;
           color: #fff;
-          font-family: Cairo;
+          font-family: Alexandria;
           font-size: 12px;
           font-weight: 600;
           line-height: 12px;
@@ -950,7 +947,7 @@
           .flash-new-offer {
             width: 46px;
             height: 16px;
-            font-family: Cairo;
+            font-family: Alexandria;
             font-size: 8px;
             font-weight: 600;
             line-height: 8px;
