--- a/public/assets/web/ASSets/css/home.css
+++ b/public/assets/web/ASSets/css/home.css
@@ -780,6 +780,7 @@
             font-family: "Alexandria", system-ui;
             line-height: 12px;
             text-align: center;
+            text-wrap: nowrap;
           }
         }
       }
